remove internal signals
The text-{modified,inserted,deleted,scrolled}
signals on VteTerminal are internal signal[s] used for communication between the terminal and its accessibility peer
. Instead of doing a gobject signal emission, we can just call the accessible object directly. The signals can then be removed (for gtk4) and never emitted (for ABI-stable gtk3).