widget: Deprecate internal signals

The text-{modified,inserted,deleted,scrolled} signals are already
documented to be internal and possibly not emitted. Deprecate them
and document them as never emitted; and internally just call the
acccessible object directly instead of via the extraneous signal
emission.

Fixes: https://gitlab.gnome.org/GNOME/vte/-/issues/332